# gundam

./: .copier-answers.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  cflibfor.f90  cflibfor.pyf  example_lrg.py  example_pcf.py  example_redblue.py  gundam.py  pyproject.toml  python.80s-30546,thor.btr  setup.cfg  setup.py  tox.ini
.github/workflows/: gundam_ci.yml  publish-to-pypi.yml  testing-and-coverage.yml
docs/: Makefile  api.rst  apidoc.sh  conf.py  header.rst  in.rst  index.rst  indic-ang.rst  indic-pro.rst  indic-red.rst  install.rst  introduction.rst  notebooks.rst  out.rst  outaddrt.rst  outdic-ang.rst  outdic-pro.rst  outdic-red.rst  outfiles.rst  performance.rst  pxorder.rst  requirements.txt
docs/notebooks/: dd_acf.npy  gundam_example_acf .ipynb  gundam_example_acf.ipynb  gundam_example_lrg.ipynb  gundam_example_pcf.ipynb
examples_data/: RAND.fits
gundam/: core.py
src/: __init__.py
src/gundam/: __init__.py  cflibfor.f90  cflibfor.pyf  gundam.py  mod.mod
tests/: pruebass.py  test_all.py
tests/data/: DATA.fits  DR7-lrg.fits  acf_gals1.fits  acf_gals1_weight.fits  acf_gals_weight.fits  acf_rans_weight.fits  afc_gals_weight.fits  afc_rans_weight.fits  c_binedges_acf.npy  dd_acf.npy  dd_acf_weight.npy  dd_pcf.npy  dd_pcf_weight.npy  debug.py  l_binedges_acf.npy  pcf_dp.cnt  pcf_gals1.fits  pcf_gals1_weight.fits  pcf_gals_weight.fits  pcf_ham.cnt  pcf_ls.cnt  pcf_nat.cnt  pcf_rans_weight.fits  r_binedges_acf.npy  rr_acf.npy  rr_acf_weight.npy  rr_pcf.npy  rr_pcf_weight.npy  run001.cnt  w_acf_nat.npy  w_acf_nat_weight.npy  w_pcf_nat.npy  w_pcf_nat_weight.npy
tests/data/red_blue_all/: all.cnt  blue.cnt  red.cnt
tests/gundam/: test_acf_nat.py  test_example_acf.py  test_example_lrg.py  test_example_pcf.py  test_example_redblue.py  test_no_grid.py  testz1.ipynb
